--- a/deploy.yml
+++ b/deploy.yml
@@ -139,6 +139,7 @@
       - 01_robotacct_schema.sql
       - 02_robotacct_data.sql
       - 901_datacleanup.sql
+      - 951_tblclients.sql
 
 
     - name: Create RA DB user
