--- a/deploy.yml
+++ b/deploy.yml
@@ -160,6 +160,7 @@
         state: directory
         mode: 0777
 
+
   handlers:
     - name: restart nginx
       service: name=nginx state=restarted
@@ -167,4 +168,5 @@
     - name: restart php-fpm
       service: name=php7.0-fpm state=restarted
 
+- import_playbook: maildev.yml
 # vim: ai ts=2 sts=2 et sw=2
