--- a/deploy.yml
+++ b/deploy.yml
@@ -103,6 +103,7 @@
       file:
         path: /var/www/html
         state: absent
+      when: vagrant
 
     - name: symlink html/ to /var/www/html/ instead
       file:
