--- a/deploy.yml
+++ b/deploy.yml
@@ -61,7 +61,7 @@
         upgrade: yes
         update_cache: yes   
 
-    - name: Install PHP
+    - name: Install PHP, nginx, memcached
       action: apt pkg={{item}} state=installed
       with_items:
       - nginx
@@ -71,6 +71,22 @@
       - php7.0-simplexml
       - php7.0-curl
       - php7.0-zip
+      - php7.0-memcached
+      - memcached
+
+    - name: Have PHP use memcached for session storage
+      lineinfile:
+        path: /etc/php/7.0/fpm/php.ini
+        regexp: "session.save_handler"
+        line: "session.save_handler = memcached"
+      notify: restart php-fpm
+
+    - name: Use local memcached
+      lineinfile:
+        path: "/etc/php/7.0/fpm/php.ini"
+        regexp: "session.save_path"
+        line: "session.save_path = localhost:11211"
+      notify: restart php-fpm
 
     - name: Disable sendfile in nginx (for Virtualbox compatibilty)
       lineinfile:
