Run main cron every 5 minutes, instead of every 1. Usually should be daily

--- a/roles/common/tasks/services.yml
+++ b/roles/common/tasks/services.yml
@@ -220,7 +220,7 @@
 - name: WHMCS cronjob
   cron:
     name: "WHMCS admin/cron.php"
-    minute: "*"
+    minute: "*/5"
     hour: "*"
     job: "/usr/bin/php -f /var/www/html/admin/cron.php"
     user: "www-data"
