--- a/roles/common/tasks/services.yml
+++ b/roles/common/tasks/services.yml
@@ -1,4 +1,4 @@
----
+--
 
 
 - name: Install PHP, nginx, memcached
@@ -29,7 +29,7 @@
     insertafter: ".*realpath_cache_ttl.*"
     line: "realpath_cache_ttl = 0"
   notify: restart php-fpm
-  when: vagrant
+  when: vagrant or ansible_inventory_hostname == "localhost"
 
 - name: Use local memcached
   lineinfile:
@@ -124,13 +124,13 @@
     owner: 0
     group: 0
     delete: 1
-  when: not vagrant
+  when: not vagrant and ansible_inventory_hostname != "localhost";
 
 - name: get rid of /var/www/html/ so we can symlink
   file:
     path: /var/www/html
     state: absent
-  when: vagrant
+  when: vagrant  or ansible_inventory_hostname == "localhost"
 
 - name: symlink html/ to /var/www/html/ instead
   file:
@@ -138,6 +138,13 @@
     path: /var/www/html
     src: /vagrant/html
   when: vagrant
+
+- name: symlink html/ to /var/ra/html/
+  file:
+    state: link
+    path: /var/www/html
+    src: /var/ra/html
+    when: ansible_inventory_hostname == "localhost"
 
 - name: Create templates_c tmpdir
   file:
