Fix up tblcustomfields.id references

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
         }
     ],
     "require": {},
-    "autoload": { 
-        "ra": {"": "html/includes/classes/"}
+    "autoload": {
+        "ra": {
+          "": "html/includes/"
+        }
     }
 
 }
