Invalid unicode in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "hdnetnz/ra",
-    "description": "Robot \bic Accounting",
+    "description": "Robotic Accounting",
     "type": "project",
     "authors": [
         {
