--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -2,4 +2,5 @@
 - include_tasks: repos_upgrades.yml
 - include_tasks: services.yml
 - include_tasks: maildev.yml
+- include_tasks: composer.yml
   # vim: ai ts=2 sts=2 et sw=2
