add phpmailer to composer.json

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "smarty/smarty": "~2.6",
-        "tinymce/tinymce": "~4.7"
+        "tinymce/tinymce": "~4.7",
+        "phpmailer/phpmailer": "~5.2"
     },
     "autoload": {
         "ra": {
