allow for already-inited composer

--- a/roles/common/tasks/composer.yml
+++ b/roles/common/tasks/composer.yml
@@ -8,3 +8,8 @@
   composer:
     command: install
     working_dir: /vagrant/
+
+- name: composer deps per composer.json (update)
+  composer:
+    command: update
+    working_dir: /vagrant/
