* Add Peter to composer.json * Add tcpdf composer require

--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,17 @@
         {
             "name": "Guy Lowe",
             "email": "guy@hd.net.nz"
+        },
+        {
+            "name": "Peter Zhang",
+            "email": "peter@hd.net.nz"
         }
     ],
     "require": {
         "smarty/smarty": "~2.6",
         "tinymce/tinymce": "~4.7",
-        "phpmailer/phpmailer": "~5.2"
+        "phpmailer/phpmailer": "~5.2",
+        "tecnickcom/tcpdf": "~6.2"
     },
     "autoload": {
         "ra": {
