--- a/roles/common/tasks/composer.yml
+++ b/roles/common/tasks/composer.yml
@@ -7,9 +7,9 @@
 - name: composer deps per composer.json
   composer:
     command: install
-    working_dir: /vagrant/
+    working_dir: /{{repo_basepath}}/
 
 - name: composer deps per composer.json (update)
   composer:
     command: update
-    working_dir: /vagrant/
+    working_dir: /{{repo_basepath}}/
