--- a/roles/common/tasks/composer.yml
+++ b/roles/common/tasks/composer.yml
@@ -4,12 +4,15 @@
   action: apt pkg={{item}} state=installed
   with_items:
     - composer
+
 - name: composer deps per composer.json
   composer:
     command: install
     working_dir: /vagrant/
+  become: no
 
 - name: composer deps per composer.json (update)
   composer:
     command: update
     working_dir: /vagrant/
+  become: no
