--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "tinymce/tinymce": "~4.7",
         "phpmailer/phpmailer": "~5.2",
         "tecnickcom/tcpdf": "~6.2",
-        "google/recaptcha": "~1.1"
+        "google/recaptcha": "~1.1",
+	"phpmyadmin/phpmyadmin": "~4.8"
     },
     "autoload": {
         "ra": {
