--- a/bower.json
+++ b/bower.json
@@ -18,8 +18,11 @@
     "glyphicons": "^0.0.2",
     "simple-line-icons": "^2.4.1",
     "animate.css": "animate-css#^3.5.2",
-    "bootstrap": "3.2.0",
-    "owl.carousel1": "^1.3.3"
+    "bootstrap": "^3.0",
+    "owl.carousel1": "^1.3.3",
+    "glyphicons-halflings": "*",
+    "roboto-fontfacekit": "^1.5.1",
+    "bootstrap-datepicker": "^1.8.0"
   },
   "resolutions": {
     "jquery": "1.9"
