--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,11 @@
     "owl.carousel1": "^1.3.3",
     "glyphicons-halflings": "*",
     "roboto-fontfacekit": "^1.5.1",
-    "bootstrap-datepicker": "^1.8.0"
+    "bootstrap-datepicker": "^1.8.0",
+    "bower-jquery-easyPieChart": "^0.0.1",
+    "jquery.cookie": "jquery-cookie#^1.4.1",
+    "jquery-slimscroll": "^1.3.8",
+    "icomoon-bower": "icomoon#^0.1.2"
   },
   "resolutions": {
     "jquery": "1.9"
