--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "jquery": "1.9",
+    "jquery3": "jquery#3",
     "components-font-awesome": "~5.0",
     "glyphicons": "^0.0.2",
     "simple-line-icons": "^2.4.1",
@@ -26,7 +27,12 @@
     "bower-jquery-easyPieChart": "^0.0.1",
     "jquery.cookie": "jquery-cookie#^1.4.1",
     "jquery-slimscroll": "^1.3.8",
-    "icomoon-bower": "icomoon#^0.1.2"
+    "icomoon-bower": "icomoon#^0.1.2",
+    "themify-icons": "^0.1.2",
+    "sweetalert2": "^7.19.3",
+    "EasyAutocomplete": "^1.3.5",
+    "jquery-form": "^4.2.2",
+    "muli-googlefont": "*"
   },
   "resolutions": {
     "jquery": "1.9"
