Attempt to fix bower issue for Peter

--- a/roles/common/tasks/bower.yml
+++ b/roles/common/tasks/bower.yml
@@ -4,8 +4,9 @@
   npm:
     name: bower
     global: yes
+  become: yes
 
 - name: Install jquery
   bower:
     path: "{{repo_basepath}}"
-  become: no 
+  become: no
