--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "jquery": "1.9",
     "jquery3": "jquery#3",
-    "components-font-awesome": "~5.0",
+    "components-font-awesome": "^4.7",
     "glyphicons": "^0.0.2",
     "simple-line-icons": "^2.4.1",
     "animate.css": "animate-css#^3.5.2",
@@ -35,6 +35,7 @@
     "muli-googlefont": "*"
   },
   "resolutions": {
-    "jquery": "1.9"
+    "jquery": "1.9",
+    "components-font-awesome": "4"
   }
 }
