--- a/roles/common/tasks/services.yml
+++ b/roles/common/tasks/services.yml
@@ -30,7 +30,7 @@
     insertafter: ".*realpath_cache_ttl.*"
     line: "realpath_cache_ttl = 0"
   notify: restart php-fpm
-  when: vagrant or inventory_hostname == "localhost"
+  when: true
 
 - name: Use local memcached
   lineinfile:
@@ -146,20 +146,20 @@
     owner: 0
     group: 0
     delete: 1
-  when: not vagrant and inventory_hostname != "localhost"
+  when: false
 
 - name: get rid of /var/www/html/ so we can symlink
   file:
     path: /var/www/html
     state: absent
-  when: vagrant  or inventory_hostname == "localhost"
+  when: false
 
 - name: symlink html/ to /var/www/html/ instead
   file:
     state: link
     path: /var/www/html
     src: /{{repo_basepath}}/html
-  when: vagrant or inventory_hostname == "localhost"
+  when: true
 
 - name: Create templates_c tmpdir
   file:
