Double-curly-braces for ansible inline templating

--- a/roles/common/tasks/bower.yml
+++ b/roles/common/tasks/bower.yml
@@ -6,7 +6,7 @@
     global: yes
   become: yes
 
-- name: Install jquery
+- name: Install bower components
   bower:
     path: "{{repo_basepath}}"
   become: no
