--- a/roles/common/tasks/services.yml
+++ b/roles/common/tasks/services.yml
@@ -85,7 +85,7 @@
     country_name: NZ
     locality_name: Auckland
     organization_name: "Robotic Accounting"
-    common_name: {{ra_hostname}}
+    common_name: "{{ra_hostname}}"
     email_address: "guy@hd.net.nz"
   register: selfsign_csr # exposes keyUsage,extendedKeyUsage,subjectAltName,subject,privatekey,filename
 
@@ -104,13 +104,13 @@
 
 - name: Check for existence of letsencrypt cert
   stat:
-    path: /etc/letsencrypt/live/{}{ra_hostname}}
+    path: "/etc/letsencrypt/live/{{ra_hostname}}"
   register: lepath
 
 - name: Overwrite SSL paths as letsencrypt
   set_fact:
-    ssl_cert: /etc/letsencrypt/live/{{ra_hostname}}/fullchain.pem
-    ssl_key: /etc/letsencrypt/live/{{ra_hostname}}/privkey.pem
+    ssl_cert: "/etc/letsencrypt/live/{{ra_hostname}}/fullchain.pem"
+    ssl_key: "/etc/letsencrypt/live/{{ra_hostname}}/privkey.pem"
   when: lepath.stat.exists and lepath.stat.isdir
 
 - name: Disable sendfile in nginx (for Virtualbox compatibilty)
@@ -158,7 +158,7 @@
   file:
     state: link
     path: /var/www/html
-    src: /{{repo_basepath}}/html
+    src: "/{{repo_basepath}}/html"
   when: true
 
 - name: Create templates_c tmpdir
@@ -212,7 +212,7 @@
   mysql_db:
     name: ra
     state: absent
-  when: "{{ vagrant | bool | default(false) }}"
+  when: {{ vagrant | bool | default(false) }}
 
 - name: Template MySQL changes for deployment (recaptcha)
   template:
