--- a/roles/common/tasks/services.yml
+++ b/roles/common/tasks/services.yml
@@ -146,19 +146,14 @@
     owner: 0
     group: 0
     delete: 1
-  when: false
+  when: false # Not in use
 
-- name: get rid of /var/www/html/ so we can symlink
-  file:
-    path: /var/www/html
-    state: absent
-  when: false
-
-- name: symlink html/ to /var/www/html/ instead
+- name: Force-symlink html/ to /var/www/html/
   file:
     state: link
     path: /var/www/html
     src: "/{{repo_basepath}}/html"
+    force: true
   when: true
 
 - name: Create templates_c tmpdir
@@ -212,7 +207,7 @@
   mysql_db:
     name: ra
     state: absent
-  when: "{{ vagrant | bool | default(false) }}"
+  when: vagrant | bool | default(false)
 
 - name: Template MySQL changes for deployment (recaptcha)
   template:
@@ -229,7 +224,7 @@
     - 999_robotacct_template.sql
     - 953_tblcustomerservicechanges.sql
     - 2018-05-16_ben_table_name_changes.sql
-    
+
   when: vagrant | bool | default(false)
 
 - name: Create RA DB user
