--- a/roles/common/tasks/services.yml
+++ b/roles/common/tasks/services.yml
@@ -148,6 +148,12 @@
     delete: 1
   when: false # Not in use
 
+  - name: get rid of /var/www/html/ so we can symlink
+    file:
+      path: /var/www/html
+      state: absent
+    when: false
+
 - name: Force-symlink html/ to /var/www/html/
   file:
     state: link
